Bug 102384 - When cursor hits another one, it starts changing its position
Summary: When cursor hits another one, it starts changing its position
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-23 09:47 UTC by Miklos Vajna
Modified: 2016-09-23 16:21 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2016-09-23 09:47:41 UTC
Steps to reproduce:

1) Open an empty Writer document.

2) Open a second window using Window -> New window. Notice that both cursors are at paragraph 0, character position 0.

3) Start typing in the first window.

Expected behavior: cursor in the second window stays unchanged.

Actual behavior: cursor gets moved with the cursor of the other window.

There are a couple of other elements that don't move when typing at the cursor position (bookmarks, at-character anchored pictures, etc), the cursor of other windows could have the same behavior, I guess.
Comment 1 Commit Notification 2016-09-23 16:19:41 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ecdec24c035513dbf2ee1814eb437e2a9d9a3d6c

tdf#102384 sw: avoid moving cursors of other windows in SwTextNode::Update()

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.