tdf#102384 sw: avoid moving cursors of other windows in SwTextNode::Update()

There is a list of exceptional SwIndex containers in that member
function, like bookmarks, at-char anchored fly frames, etc. If we're
growing (so basically in the safe case), don't touch the cursors of
other windows, either.

This helps to avoid the surprising "I didn't do anything and my cursor
moved" behavior.

Change-Id: I9941fdcb6b7ad4b6e18a321cecc72fdf73d917fd